--- a/scene.yaml
+++ b/scene.yaml
@@ -15,7 +15,7 @@ global:
     # https://mapzen.com/documentation/overview/#developer-accounts-and-api-keys
     sdk_api_key: '3eqm2_bfTNGZ85ar20fVyA'     # set this value to your Mapzen API key
 
-    text_font_family: 'Orbitron'
+    text_font_family: 'Open Sans'
 
     #ux/ui
     ux_language: false             # l10n language code, trusting OSM in v0.10 tiles, fixed in v1.0 tiles
@@ -155,10 +155,21 @@ global:
 
 # Fonts
 fonts:
-    Orbitron:
+    Open Sans:
+        - weight: 300 # Light
+          url: fonts/OpenSans-Light.woff
         - weight: normal # Regular
-          # url: https://fonts.gstatic.com/s/orbitron/v7/94ug0rEgQO_WuI_xKJMFc3YhjbSpvc47ee6xR_80Hnw.woff
-          url: fonts/94ug0rEgQO_WuI_xKJMFc3YhjbSpvc47ee6xR_80Hnw.woff
+          url: fonts/OpenSans-Regular.woff
+        - weight: normal # Regular
+          style: italic
+          url: fonts/OpenSans-Italic.woff
+        - weight: 600 # Semi Bold
+          url: fonts/OpenSans-Semibold.woff
+        - weight: 600 # Semi Bold
+          style: italic
+          url: fonts/OpenSans-SemiboldItalic.woff
+        - weight: bold
+          url: fonts/OpenSans-Bold.woff
 
 
 scene:
@@ -354,6 +365,7 @@ layers:
                     text_source: global.ux_language_text_source
                     font:
                         fill: [0.000,0.000,0.000]
+                        weight: 600
                         # stroke: { color: [0.957,0.969,0.976], width: 4px }
             country-z2-3:
                 filter:
